tests/good/03_simple_bool_false.src
# Test: Simple boolean false return
# Expected: 0
void main() {
    print_bool(false);
}
