tests/bad/06_undefined_var.src
# Test: Undefined variable
void main() {
    return undefined_var;  # Variable not declared
}
